# moonshot-BACKEND

./: .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml
backend/: AGENT_EMR_MAPPING.md  API_SINGLE_FLOW.md  EKA_PARAMS.md  README.md  config.py  main.py  requirements.txt  supabase_emr_mappings.sql
backend/agent/: __init__.py  emr_runner.py  graph.py  models.py  prompts.py  state.py  tools.py
backend/routers/: agent_router.py  eka_abdm.py  ekascribe.py  pipeline.py  scribe2fhir.py
backend/services/: eka_abdm.py  ekascribe.py  ekascribe_to_fhir.py  scribe2fhir.py  supabase_client.py
scribe2fhir/: DOCUMENTATION_SETUP.md  LICENSE  README.md
scribe2fhir/.github/workflows/: deploy-docs.yml
scribe2fhir/docs/: README.md  astro.config.mjs  package-lock.json  package.json
scribe2fhir/docs/src/content/docs/: index.mdx  installation.md  introduction.md  python-sdk
scribe2fhir/docs/src/content/docs/examples/: example-usage.md
scribe2fhir/python/: README.md
scribe2fhir/python/docs/: ALLERGY_HISTORY.md  CLINICAL_NOTES.md  ENCOUNTER.md  EXAMINATION_FINDINGS.md  FAMILY_HISTORY.md  FOLLOWUP_APPOINTMENT.md  IMMUNIZATION_HISTORY.md  LAB_FINDINGS.md  LAB_TEST_ORDERING.md  LIFESTYLE_HISTORY.md  MEDICAL_CONDITION.md  MEDICATION_HISTORY.md  MEDICATION_PRESCRIPTION.md  PATIENT.md  PATIENT_ADVICE.md  PROCEDURE_HISTORY.md  PROCEDURE_ORDERING.md  README.md  SYMPTOM.md  VITAL_SIGNS.md
scribe2fhir/python/scribe2fhir/core/resources/: patient.py
scribe2fhir/python/tests/: IMPLEMENTATION_SUMMARY.md
scribe2fhir/scripts/: generate_registry_docs.py
(+4 files in other folders)
